--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -1,43 +1,32 @@
-{% extends "base.html" %} {% block title %}analyze/create{% endblock %} {% block
-content %}
+{% extends "base.html" %} 
+{% block title %}analyze/create{% endblock %} 
+{% block content %}
+
 <br />
-<h1 align="left">Analyze & Create Covering Letter</h1>
+  <h1 align="left">Analyze & Create Covering Letter</h1>
 <br />
-<h3 align="left">Use this page to Analyze the job advert and tailor your covering letter</h3>
+  <h3 align="left">Use this page to Analyze the job advert and tailor your covering letter</h3>
 <br />
 
 <form action="{{ url_for('views.generate') }}" method="post">
   <h5 align="left">Insert job advertisement</h5>
   <div class="form-group">
-    <textarea
-      class="form-control"
-      id="job_ad"
-      name="job_ad"
-      rows="10"
-      placeholder="Copy & paste job advert here..."
-    ></textarea>
+    <textarea class="form-control" id="job_ad" name="job_ad" rows="10" placeholder="Copy & paste job advert here...">{{ input_value }}</textarea>
   </div>
   <div>
-    <button
-      type="submit"
-      name="analyze"
-      class="btn btn-primary"
-      onclick="analyzeForm()"
-    >
-      Analyze
-    </button>
+    <button type="submit" name="analyze" class="btn btn-primary" onclick="analyzeForm()">Analyze</button>
     <button type="reset" class="btn btn-danger ml-2">Reset</button>
   </div>
 </form>
   
-  <div id="analysisResult">{{ analysisResult | safe }}</div>
+<div id="analysisResult">{{ analysisResult | safe }}</div>
   
-  <br id="createCover"/>
+<br id="createCover"/>
   <h3 align="left">Create Your Tailored Supporting Covering Letter</h3>
-  <br />
+<br />
   <button type="button" id="toggleFormBtn" class="btn btn-primary mb-3">Create Optimised Covering Letter</button>
   
-  <div class="form-group" id="projectForm">
+    <div class="form-group" id="projectForm">
     <h5 align="left">Passages you want to include</h5>
     <select id="selectTag" class="form-control">
       <option disabled selected value="">Select Passages</option>
